# Discord-Github-Bot

./: .gitignore  CMakeLists.txt  LIBRARIES.md  LICENSE.md  build.bat  example.env
_external_shared/OpenSSL/: CHANGES.txt
_external_shared/Opus/: CHANGES.txt
_external_shared/ZLib/: CHANGES.txt
_external_shared/dotenv-cpp/: CHANGES.txt
_external_shared/dpp/: CHANGES.txt  LICENSE.txt  dpp.lib
_external_shared/dpp/include/: appcommand.h  application.h  auditlog.h  automod.h  ban.h  bignum.h  cache.h  channel.h  cluster.h  collector.h  commandhandler.h  discordclient.h  discordevents.h  discordvoiceclient.h  dispatcher.h  dns.h  dpp.h  dtemplate.h  emoji.h  entitlement.h  etf.h  event.h  event_router.h  exception.h  export.h  guild.h  httpsclient.h  integration.h  invite.h  json.h  json_fwd.h  json_interface.h  managed.h  message.h  misc-enum.h  once.h  permissions.h  presence.h  prune.h  queues.h  (+20 more)
_external_shared/dpp/include/coro/: async.h  awaitable.h  coroutine.h  job.h  task.h
_external_shared/dpp/include/isa/: fallback.h
_external_shared/libcurl/: CHANGES.txt
include/: bot.hpp  configfile.hpp  console.hpp  core.hpp  fileutils.hpp  gui.hpp  render.hpp  stringutils.hpp
src/: bot.cpp  configfile.cpp  console.cpp  core.cpp  fileutils.cpp  gui.cpp  main.cpp  render.cpp  stringutils.cpp
